some change in class ServletTest.java